sgs.tf
resource "aws_security_group" "ec2-sg" {
  name        = "flask-ec2-sg"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.flask_vpc.id

 

ingress {
  
  from_port         = 22
  protocol          = "tcp"
  to_port           = 22
  cidr_blocks       = ["0.0.0.0/0"] 
}


ingress {
  
  from_port         = 80
  protocol          = "tcp"
  to_port           = 80
  cidr_blocks       = ["0.0.0.0/0"] 
}


egress {
  
  from_port         = 0
  protocol          = "-1"
  to_port           = 0
  cidr_blocks       = ["0.0.0.0/0"] 
 }

tags = {
    Name = "flask_ec2_sg"
 }
}

resource "aws_security_group" "rds_sg" {
  name        = "rds_db_sg"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.flask_vpc.id

 

ingress {
  
  from_port         = 3306
  protocol          = "tcp"
  to_port           = 3306
  security_groups   = [aws_security_group.ec2-sg.id]  
}


egress {
  
  from_port         = 0
  protocol          = "-1"
  to_port           = 0
  cidr_blocks       = ["0.0.0.0/0"] 
}


tags = {
    Name = "rds_db_sg"
 }
}
